# Reinforcement-Learning

./: .gitignore  ares.txt  requirements.txt
.claude/: settings.json  (+1 more)
lab07/: RAPORT.md  README.md  collect_minari.py  compare_dt.py  dt_eval.py  evaluate_dt.py  main.py  notes.md  pyproject.toml  record_video.py  requirements.txt  run.txt  train_dt.py  train_lunarlander.py
lab07/output/: compare_returns.json
lab07/output/dt/: ppo_beginner_100k-v0.pth  ppo_expert_1000k-v0.pth  ppo_intermediate_400k-v0.pth  ppo_junior_200k-v0.pth
lab09/: NOTES.md  README.md  commands.txt  data.py  pyproject.toml  requirements.txt  rewards.py  train.py  vocab.py
lab09/.claude/: settings.json
lab09/runs/000001_smoke/: config.json
lab09/runs/000001_smoke/conversations/: step_00005.jsonl  step_00010.jsonl  step_00015.jsonl  step_00020.jsonl
lab09/runs/000001_smoke/tensorboard/: events.out.tfevents.1781700398.DESKTOP-DTSLUJS.20444.1
lab09/runs/000002_observe/conversations/: step_00025.jsonl  step_00050.jsonl  step_00075.jsonl  step_00100.jsonl  step_00125.jsonl  step_00150.jsonl  step_00175.jsonl  step_00200.jsonl  step_00225.jsonl  step_00250.jsonl  step_00275.jsonl  step_00300.jsonl
lab09/runs/000002_observe/tensorboard/: events.out.tfevents.1781701688.DESKTOP-DTSLUJS.19008.1
lab09/runs/000003_observe_2/: config.json
lab09/runs/000003_observe_2/conversations/: step_00025.jsonl  step_00050.jsonl  step_00075.jsonl  step_00100.jsonl  step_00125.jsonl  step_00150.jsonl  step_00175.jsonl  step_00200.jsonl  step_00225.jsonl  step_00250.jsonl  step_00275.jsonl  step_00300.jsonl
(+661 files in other folders)
