[project]
name = "lab07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d]",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "jax>=0.10.1",
    "minari>=0.5.3",
    "nanodt>=0.1.0",
    "rich>=15.0.0",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
]
