[project]
name = "lab09"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2",
    "transformers>=4.45",
    "accelerate>=0.30",
    "trl>=0.12",
    "peft>=0.13",
    "datasets>=2.20",
    "wordfreq>=3.0",
    "tensorboard>=2.14",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true